--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- font-family: 'Catamaran', sans-serif;
-font-family: 'Croissant One', cursive;
-font-family: 'Dela Gothic One', cursive;
+    <!-- font-family: 'Caveat', cursive;
 font-family: 'Josefin Sans', sans-serif;
-font-family: 'Lexend Deca', sans-serif;
-font-family: 'Merriweather', serif;
-font-family: 'Montserrat', sans-serif;
-font-family: 'Poppins', sans-serif;
-font-family: 'Raleway', sans-serif; -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
+font-family: 'Neonderthaw', cursive;
+font-family: 'Permanent Marker', cursive;
+font-family: 'Raleway', sans-serif;
+font-family: 'Righteous', cursive; -->
+ <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;900&family=Croissant+One&family=Dela+Gothic+One&family=Inter:wght@100;300;500;900&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lexend+Deca:wght@100;300;400;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,500;0,900;1,100;1,400;1,900&family=Poppins:ital,wght@0,100;0,200;0,400;0,900;1,100;1,200&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;700&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Neonderthaw&family=Permanent+Marker&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Righteous&display=swap" rel="stylesheet">
 <!--  -->
     <meta name="theme-color" content="#000000" />
     <meta
