added scroll button

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,20 @@
     <!-- font-family: 'Catamaran', sans-serif;
 font-family: 'Croissant One', cursive;
 font-family: 'Dela Gothic One', cursive;
+font-family: 'Inter', sans-serif;
 font-family: 'Josefin Sans', sans-serif;
 font-family: 'Lexend Deca', sans-serif;
 font-family: 'Merriweather', serif;
 font-family: 'Montserrat', sans-serif;
+font-family: 'Pangolin', cursive;
+font-family: 'Patrick Hand SC', cursive;
 font-family: 'Poppins', sans-serif;
 font-family: 'Raleway', sans-serif;
+font-family: 'Short Stack', cursive;
 font-family: 'Walter Turncoat', cursive; -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;900&family=Croissant+One&family=Dela+Gothic+One&family=Inter:wght@100;300;500;900&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lexend+Deca:wght@100;300;400;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,500;0,900;1,100;1,400;1,900&family=Poppins:ital,wght@0,100;0,200;0,400;0,900;1,100;1,200&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Walter+Turncoat&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;900&family=Croissant+One&family=Dela+Gothic+One&family=Inter:wght@100;300;500;900&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lexend+Deca:wght@100;300;400;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,500;0,900;1,100;1,400;1,900&family=Pangolin&family=Patrick+Hand+SC&family=Poppins:ital,wght@0,100;0,200;0,400;0,900;1,100;1,200&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Short+Stack&family=Walter+Turncoat&display=swap" rel="stylesheet">
 <!--  -->
     <meta name="theme-color" content="#000000" />
     <meta
